--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
       <ul class="nav navbar-nav navbar-right" >
         <li style>
         <a href="#" > 
-        <span class="glyphicon glyphicon-cutlery"></span> chicken</a>
+        <span class="glyphicon glyphicon-cutlery"></span> Rooster</a>
         </li>
         <li>
         <a href="#" >
-        <span class="glyphicon glyphicon-info-sign"></span> beef</a>
+        <span class="glyphicon glyphicon-info-sign"></span> Mutton</a>
         </li>
         <li>
         <a href="#">
-        <span class="glyphicon glyphicon-certificate"></span> sushi</a>
+        <span class="glyphicon glyphicon-certificate"></span> Prawns</a>
         </li>
       </ul>
     </div>
@@ -42,7 +42,7 @@
 </nav>
 <br>
 <br>  
-<h1><p class="text-center">Our Menu</p></h1>
+<h1><p class="text-center">Rooster</p></h1>
 
 
 <div id="main-content" class="container">
